implementacion de la barra (solo grafico)

--- a/app/src/main/res/layout/activity_visordecomics.xml
+++ b/app/src/main/res/layout/activity_visordecomics.xml
@@ -12,6 +12,7 @@
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
         android:orientation="vertical">
+
         <include
             android:id="@+id/toolbar"
             layout="@layout/toolbar" />
@@ -28,11 +29,7 @@
         android:baselineAligned="false"
         android:gravity="top"
         android:orientation="horizontal">
-
-
-
     </LinearLayout>
-
 
     <ListView
         android:id="@+id/listMain"
@@ -40,20 +37,19 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/linearLogo"
         android:layout_marginTop="5dp"
-        android:divider="#404040"
+        android:divider="@color/divider"
         android:dividerHeight="2dp"
-        android:foregroundGravity="center"/>
+        android:foregroundGravity="center" />
 
     <com.google.android.gms.ads.AdView
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
         android:layout_centerHorizontal="true"
+        android:layout_marginBottom="10dp"
         app:adSize="BANNER"
         app:adUnitId="ca-app-pub-5146175048698339/1447542724">
-
     </com.google.android.gms.ads.AdView>
 
     <FrameLayout
@@ -62,7 +58,6 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true">
-
     </FrameLayout>
 
 </RelativeLayout>
