--- a/app/src/main/res/layout/activity_links.xml
+++ b/app/src/main/res/layout/activity_links.xml
@@ -9,12 +9,17 @@
     <ScrollView
         android:id="@+id/scrolllinks"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true">
 
         <LinearLayout
             android:id="@+id/linearlinks"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical" />
+            android:orientation="vertical">
+
+        </LinearLayout>
     </ScrollView>
+
 </RelativeLayout>
