--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,6 +6,7 @@
     tools:context=".MainActivity">
 
     <ScrollView
+        android:id="@+id/aviso1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
 
@@ -14,46 +15,62 @@
             android:layout_height="match_parent"
             android:orientation="vertical">
 
+            <TextView
+                android:id="@+id/aviso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/aviso"
+                android:textAlignment="center"
+                android:textStyle="bold|italic" />
+
+            <TextView
+                android:id="@+id/aviso"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="@string/aviso2"
+                android:textAlignment="center"
+                android:textStyle="bold|italic" />
+
             <ImageButton
                 android:id="@+id/dcComics"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
-                android:onClick="iralcomic"
-                android:contentDescription="@string/dcComics"
                 android:background="@android:color/transparent"
+                android:contentDescription="@string/dcComics"
+                android:onClick="iralcomic"
                 android:scaleType="fitXY"
                 android:src="@mipmap/dc2" />
 
             <ImageButton
                 android:id="@+id/marvel"
                 android:layout_width="match_parent"
-                android:background="@android:color/transparent"
-                android:scaleType="fitXY"
-                android:src="@mipmap/marvel1"
-                android:contentDescription="@string/marvel"
                 android:layout_height="130dp"
-                android:onClick="iralcomic"/>
+                android:background="@android:color/transparent"
+                android:contentDescription="@string/marvel"
+                android:onClick="iralcomic"
+                android:scaleType="fitXY"
+                android:src="@mipmap/marvel1" />
 
             <ImageButton
                 android:id="@+id/manga"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
                 android:background="@android:color/transparent"
-                android:src="@mipmap/manga1"
                 android:contentDescription="@string/manga"
+                android:onClick="iralcomic"
                 android:scaleType="fitXY"
-                android:onClick="iralcomic"/>
+                android:src="@mipmap/manga1" />
 
 
             <ImageButton
                 android:id="@+id/darkHorse"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
-                android:scaleType="fitXY"
-                android:contentDescription="@string/dark"
                 android:background="@android:color/transparent"
-                android:src="@mipmap/darkhourse1"
-                android:onClick="iralcomic"/>
+                android:contentDescription="@string/dark"
+                android:onClick="iralcomic"
+                android:scaleType="fitXY"
+                android:src="@mipmap/darkhourse1" />
 
             <ImageButton
                 android:id="@+id/imageComics"
@@ -61,9 +78,9 @@
                 android:layout_height="130dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/image"
+                android:onClick="iralcomic"
                 android:scaleType="fitXY"
-                android:src="@mipmap/image1"
-                android:onClick="iralcomic"/>
+                android:src="@mipmap/image1" />
 
             <ImageButton
                 android:id="@+id/vertigo"
@@ -71,19 +88,19 @@
                 android:layout_height="130dp"
                 android:background="@android:color/transparent"
                 android:contentDescription="@string/vertigo"
+                android:onClick="iralcomic"
                 android:scaleType="fitXY"
-                android:src="@mipmap/vertigo2"
-                android:onClick="iralcomic"/>
+                android:src="@mipmap/vertigo2" />
 
 
             <ImageButton
                 android:id="@+id/idwComics"
                 android:layout_width="match_parent"
-                android:background="@android:color/transparent"
-                android:scaleType="fitXY"
-                android:src="@mipmap/idw2"
                 android:layout_height="130dp"
-                android:onClick="iralcomic"/>
+                android:background="@android:color/transparent"
+                android:onClick="iralcomic"
+                android:scaleType="fitXY"
+                android:src="@mipmap/idw2" />
 
             <ImageButton
                 android:id="@+id/others"
