--- a/app/src/main/res/layout/comiccard.xml
+++ b/app/src/main/res/layout/comiccard.xml
@@ -15,38 +15,38 @@
         android:layout_width="120dp"
         android:layout_height="140dp"
         android:layout_alignParentTop="true"
-        android:layout_marginBottom="2dp"
-        android:layout_marginEnd="4dp"
-        android:layout_marginTop="2dp"
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
         android:cropToPadding="false"
         android:maxHeight="120dp"
-        android:maxWidth="120dp"/>
+        android:maxWidth="120dp" />
 
 
     <TextView
         android:id="@+id/comicName"
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:layout_marginTop="16dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="24dp"
         android:layout_toEndOf="@+id/comicImage"
-
         android:gravity="center_horizontal"
-        android:text='"Spiderman"'
-        android:textAppearance="?android:attr/textAppearanceLarge"
-        android:textColor="@android:color/background_dark"
-        android:textSize="24sp" />
+        android:textColor="@color/primary_text"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <Button
         android:id="@+id/buttonLink"
         style="@android:style/Widget.Material.Button.Colored"
-        android:layout_width="233dp"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"
         android:layout_marginEnd="8dp"
-        android:layout_marginStart="131dp"
+        android:layout_marginStart="8dp"
         android:layout_marginTop="85dp"
+        android:layout_toEndOf="@id/comicImage"
         android:text="Open"
         android:textAlignment="center" />
 
