--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -10,13 +10,12 @@
     local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
     <EditText
-        android:id="@+id/godSearch"
+        android:id="@+id/comicSearch"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_margin="6dp"
+        android:layout_margin="8dp"
         android:background="@color/primary_light"
         android:drawableEnd="@drawable/ic_search_24"
-        android:focusable="true"
         android:focusableInTouchMode="true"
         android:hint="Buscar por nombre..."
         android:imeOptions="actionSearch"
