--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -104,25 +104,25 @@
                 android:contentDescription="@string/otros"
                 android:onClick="iralcomic"
                 android:scaleType="fitXY"
-                android:src="@mipmap/idw2" />
+                android:src="@mipmap/otros" />
 
             <ImageButton
                 android:id="@+id/others2"
                 android:layout_width="match_parent"
                 android:layout_height="130dp"
+                android:background="@color/Negro"
                 android:text="Otros" />
         </LinearLayout>
     </ScrollView>
 
-    <com.google.android.gms.ads.AdView
-        xmlns:ads="http://schemas.android.com/apk/res-auto"
+    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
         android:id="@+id/adView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
         android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="19dp"
         ads:adSize="BANNER"
-        ads:adUnitId="ca-app-pub-5146175048698339/3586112095">
-    </com.google.android.gms.ads.AdView>
+        ads:adUnitId="ca-app-pub-5146175048698339/3586112095"></com.google.android.gms.ads.AdView>
 
 </RelativeLayout>
