--- a/app/src/main/res/layout/activity_visordecomics.xml
+++ b/app/src/main/res/layout/activity_visordecomics.xml
@@ -48,9 +48,9 @@
         android:id="@+id/adView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_marginBottom="10dp"
-        android:layout_centerHorizontal="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="74dp"
         app:adSize="BANNER"
         app:adUnitId="ca-app-pub-5146175048698339/1447542724">
 
