--- a/app/src/main/res/layout/comiccard.xml
+++ b/app/src/main/res/layout/comiccard.xml
@@ -18,6 +18,7 @@
         android:layout_marginBottom="8dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
+        android:contentDescription="@string/abrir"
         android:cropToPadding="false"
         android:maxHeight="120dp"
         android:maxWidth="120dp" />
@@ -47,7 +48,7 @@
         android:layout_marginStart="8dp"
         android:layout_marginTop="85dp"
         android:layout_toEndOf="@id/comicImage"
-        android:text="Open"
+        android:text="@string/abrir"
         android:textAlignment="center" />
 
 
