--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -9,6 +9,11 @@
     local:popupTheme="@style/ThemeOverlay.AppCompat.Light"
     local:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:descendantFocusability="beforeDescendants"
+        android:focusableInTouchMode="true">
     <EditText
         android:id="@+id/comicSearch"
         android:layout_width="match_parent"
@@ -16,13 +21,13 @@
         android:layout_margin="8dp"
         android:background="@color/primary_light"
         android:drawableEnd="@drawable/ic_search_24"
-        android:focusableInTouchMode="true"
         android:hint="Buscar por nombre..."
         android:imeOptions="actionSearch"
         android:inputType="text"
         android:maxLines="1"
         android:padding="6dp"
         android:textColor="@color/primary_text"
-        android:textColorHint="@color/secondary_text" />
+        android:textColorHint="@color/secondary_text"/>
+    </LinearLayout>
 
 </android.support.v7.widget.Toolbar>
