--- a/app/src/main/res/layout/activity_visordecomics.xml
+++ b/app/src/main/res/layout/activity_visordecomics.xml
@@ -45,7 +45,7 @@
         android:foregroundGravity="center"/>
 
     <com.google.android.gms.ads.AdView
-        android:id="@+id/adView"
+        android:id="@+id/adView2"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentStart="true"
