--- a/app/src/main/res/layout/comiccard.xml
+++ b/app/src/main/res/layout/comiccard.xml
@@ -43,11 +43,10 @@
         style="@android:style/Widget.Material.Button.Colored"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_marginEnd="8dp"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="85dp"
-        android:layout_toEndOf="@id/comicImage"
+        android:layout_alignParentEnd="true"
+        android:layout_below="@+id/comicImage"
+        android:layout_marginEnd="0dp"
+        android:layout_marginTop="-8dp"
         android:text="@string/abrir"
         android:textAlignment="center" />
 
