--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -4,57 +4,79 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/Negro"
     tools:context=".MainActivity">
-
-    <LinearLayout
-        android:id="@+id/linearToolbar"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:orientation="vertical">
-        <include
-            android:id="@+id/toolbar"
-            layout="@layout/toolbar" />
-    </LinearLayout>
-
-
-    <LinearLayout
-        android:id="@+id/linearLogo"
-        android:layout_width="match_parent"
-        android:layout_height="79dp"
-        android:layout_alignParentStart="true"
-        android:layout_below="@+id/linearToolbar"
-        android:background="#bf950c"
-        android:baselineAligned="false"
-        android:gravity="top"
-        android:orientation="horizontal">
-
-
-
-    </LinearLayout>
 
 
     <ListView
         android:id="@+id/listMain"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/linearLogo"
-        android:layout_marginTop="5dp"
+        android:layout_height="484dp"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentStart="true"
         android:divider="#404040"
         android:dividerHeight="2dp"
-        android:foregroundGravity="center"/>
+        android:foregroundGravity="center" />
 
-    <com.google.android.gms.ads.AdView
-        android:id="@+id/adView2"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="74dp"
-        app:adSize="BANNER"
-        app:adUnitId="ca-app-pub-5146175048698339/1447542724">
+        android:orientation="vertical">
 
-    </com.google.android.gms.ads.AdView>
+        <TextView
+            android:id="@+id/textView"
+            android:layout_width="match_parent"
+            android:layout_height="33dp"
+            android:layout_above="@+id/listMain"
+            android:layout_centerHorizontal="true"
+            android:layout_weight="1"
+            android:fontFamily="casual"
+            android:text="@string/recomendacione"
+            android:textAlignment="center"
+            android:textColor="@color/amarillo"
+            android:textSize="30sp"
+            android:textStyle="bold" />
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/button5"
+                android:layout_width="320dp"
+                android:layout_height="match_parent"
+                android:layout_alignEnd="@+id/textView"
+                android:layout_alignParentTop="true"
+                android:layout_weight="1"
+                android:onClick="visitar"
+                android:text="@string/Categorias" />
+
+            <Button
+                android:id="@+id/button4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_alignParentStart="true"
+                android:layout_alignParentTop="true"
+                android:layout_marginStart="53dp"
+                android:layout_weight="1"
+                android:onClick="recargarlista"
+                android:text="@string/masreco" />
+
+        </LinearLayout>
+
+        <com.google.android.gms.ads.AdView
+            android:id="@+id/adView2"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_above="@+id/textView"
+            android:layout_alignParentStart="true"
+            app:adSize="BANNER"
+            app:adUnitId="ca-app-pub-5146175048698339/1447542724">
+
+        </com.google.android.gms.ads.AdView>
+
+    </LinearLayout>
 
     <FrameLayout
         android:id="@+id/ghostFrame"
