--- a/app/src/main/res/layout/activity_inicio.xml
+++ b/app/src/main/res/layout/activity_inicio.xml
@@ -8,6 +8,15 @@
     tools:context=".MainActivity">
 
 
+    <ImageView
+        android:id="@+id/imageView3"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:contentDescription="@string/recomendacione"
+        android:scaleType="fitXY"
+        app:srcCompat="@drawable/jide" />
+
     <ListView
         android:id="@+id/listMain"
         android:layout_width="match_parent"
@@ -21,6 +30,10 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="5dp"
+        android:layout_marginTop="15dp"
         android:orientation="vertical">
 
         <TextView
@@ -30,10 +43,11 @@
             android:layout_above="@+id/listMain"
             android:layout_centerHorizontal="true"
             android:layout_weight="1"
-            android:fontFamily="casual"
+            android:fontFamily="sans-serif-smallcaps"
             android:text="@string/recomendacione"
             android:textAlignment="center"
-            android:textColor="@color/amarillo"
+            android:textAllCaps="true"
+            android:textColor="@color/Negro"
             android:textSize="30sp"
             android:textStyle="bold" />
 
@@ -44,13 +58,16 @@
 
             <Button
                 android:id="@+id/button5"
+                style="@style/Widget.AppCompat.Button"
                 android:layout_width="320dp"
                 android:layout_height="match_parent"
                 android:layout_alignEnd="@+id/textView"
                 android:layout_alignParentTop="true"
                 android:layout_weight="1"
+                android:background="?android:attr/colorActivatedHighlight"
                 android:onClick="visitar"
-                android:text="@string/Categorias" />
+                android:text="@string/Categorias"
+                android:textColor="?android:attr/colorForeground" />
 
             <Button
                 android:id="@+id/button4"
@@ -60,6 +77,7 @@
                 android:layout_alignParentTop="true"
                 android:layout_marginStart="53dp"
                 android:layout_weight="1"
+                android:background="#0b8e7b"
                 android:onClick="recargarlista"
                 android:text="@string/masreco" />
 
@@ -72,19 +90,8 @@
             android:layout_above="@+id/textView"
             android:layout_alignParentStart="true"
             app:adSize="BANNER"
-            app:adUnitId="ca-app-pub-5146175048698339/1447542724">
-
-        </com.google.android.gms.ads.AdView>
+            app:adUnitId="ca-app-pub-5146175048698339/14"></com.google.android.gms.ads.AdView>
 
     </LinearLayout>
-
-    <FrameLayout
-        android:id="@+id/ghostFrame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
-
-    </FrameLayout>
 
 </RelativeLayout>
